feat: Implement command dialog and UI components
- Added Command, CommandDialog, CommandInput, CommandList, CommandEmpty, CommandGroup, CommandItem, CommandShortcut, and CommandSeparator components for a command palette UI.
- Created Dialog, DialogTrigger, DialogPortal, DialogClose, DialogOverlay, DialogContent, DialogHeader, DialogFooter, DialogTitle, and DialogDescription components for a customizable dialog interface.
- Introduced Popover, PopoverTrigger, PopoverContent, and PopoverAnchor components for popover functionality.
- Updated axios instance timeout from 10 seconds to 60 seconds for improved API request handling.
- Added constants for crops and location data to facilitate state and district selection in the prediction form.
- Refactored prediction page to utilize new SelectInput component and improved form handling.
- Enhanced result page to properly extract form data from navigation state.
- Updated prediction slice to log prediction responses for debugging.
- Removed latitude and longitude from PredictionRequest type as they are no longer needed.
- Modified fetch_weather_async function to check if the season end date is in the future before fetching weather data.