@@ -1,20 +1,20 @@
 package com.meet.sbs.config;
 
-import java.io.IOException;
-import java.util.List;
-
+import com.meet.sbs.service.JwtService;
+import com.meet.sbs.utils.CookieUtil;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.security.web.authentication.SimpleUrlAuthenticationSuccessHandler;
 import org.springframework.stereotype.Component;
 
-import com.meet.sbs.service.JwtService;
-import com.meet.sbs.utils.CookieUtil;
-
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-import lombok.RequiredArgsConstructor;
+import java.io.IOException;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @Component
 @RequiredArgsConstructor
@@ -27,12 +27,15 @@ public class OAuth2LoginSuccessHandler extends SimpleUrlAuthenticationSuccessHan
 
     @Override
     public void onAuthenticationSuccess(HttpServletRequest request, HttpServletResponse response,
-            Authentication authentication) throws IOException {
+                                        Authentication authentication) throws IOException {
 
         OAuth2User oAuth2User = (OAuth2User) authentication.getPrincipal();
-        String email = oAuth2User.getAttribute("email");
 
-        String token = jwtService.generateToken(email, oAuth2User.getAttributes());
+        Map<String, Object> claims = new HashMap<>(oAuth2User.getAttributes());
+        claims.remove("sub");
+        String email = oAuth2User.getAttribute("email");
+        logger.info("OAuth2 Login Success for email: " + email);
+        String token = jwtService.generateToken(email, claims);
 
         response.addCookie(CookieUtil.createJwtCookie("X-Access-Token", token));
 
@@ -47,10 +50,10 @@ public class OAuth2LoginSuccessHandler extends SimpleUrlAuthenticationSuccessHan
             return allowedFrontends.stream()
                     .filter(referer::startsWith)
                     .findFirst()
-                    .orElse(allowedFrontends.get(0));
+                    .orElse(allowedFrontends.getFirst());
         }
 
-        return allowedFrontends.get(0);
+        return allowedFrontends.getFirst();
     }
 
 }
